--- a/functions/package.json
+++ b/functions/package.json
@@ -14,8 +14,10 @@
   "main": "index.js",
   "dependencies": {
     "@tiptap/extension-placeholder": "^2.25.0",
+    "axios": "^1.13.2",
     "firebase-admin": "^12.6.0",
-    "firebase-functions": "^6.0.1"
+    "firebase-functions": "^6.0.1",
+    "telegraf": "^4.16.3"
   },
   "devDependencies": {
     "firebase-functions-test": "^3.1.0"
